style: fix view on tablet

--- a/projects/ngx-xchange-ui/src/components/user-profile-modal/user-profile-modal.component.css
+++ b/projects/ngx-xchange-ui/src/components/user-profile-modal/user-profile-modal.component.css
@@ -172,7 +172,7 @@
 }
 
 @media screen and (max-width: 798px) {
-  .more.information {
+  .more-information {
     width: 100%;
     min-height: auto;
   }
